--- a/requirements.txt
+++ b/requirements.txt
@@ -169,7 +169,7 @@ pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 pyviz-comms==2.3.2
 PyWavelets==1.4.1
-pip==23.2
+pip
 pywin32
 pywinpty==2.0.10
 PyYAML==5.4.1
