--- a/requirements.txt
+++ b/requirements.txt
@@ -163,6 +163,7 @@ pyparsing==3.1.0
 pyrsistent==0.19.3
 pyserial==3.5
 pytest==7.4.0
+python==3.7
 python-dateutil==2.8.2
 python-utils==3.7.0
 pytz==2022.7.1
