--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ cachetools==5.3.1
 category-encoders==2.6.1
 certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==3.0.1
+charset-normalizer
 click==8.1.3
 cloudpickle==2.2.1
 colorama==0.4.6
