--- a/requirements.txt
+++ b/requirements.txt
@@ -1,257 +1,62 @@
-pip
-aionotify==0.2.0
-alembic==1.11.1
-altair==5.0.1
-ansi2html==1.8.0
-anyio==3.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.6.0
-asttokens==2.2.1
-attrs==22.2.0
-Automat==22.10.0
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-blinker==1.6.2
-bokeh==2.4.3
-boto3==1.26.158
-botocore==1.29.165
-cachetools==5.3.1
-category-encoders==2.6.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer
-click==8.1.3
-cloudpickle==2.2.1
+beautifulsoup4==4.12.2
+charset_normalizer==2.0.4
+click==8.0.4
 colorama==0.4.6
-colorcet==3.0.1
-colour==0.1.5
-comm==0.1.3
-constantly==15.1.0
-contourpy==1.1.0
-cryptography==39.0.1
-cssselect==1.2.0
-cycler==0.11.0
-Cython==0.29.35
-dacite==1.8.1
-dash==2.10.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-databricks-cli==0.17.7
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-deprecation==2.1.0
-dill==0.3.6
-distlib==0.3.6
-Django==4.1.7
-docker==6.1.3
-docopt==0.6.2
-emoji==2.6.0
-entrypoints==0.4
-exceptiongroup==1.1.2
-executing==1.2.0
-fastjsonschema==2.17.1
-filelock==3.9.0
+cx_Freeze==6.15.4
+Cython==3.0.0
+docutils==0.18.1
+docutils==0.18.1
 fitter==1.5.2
-Flask==2.2.3
-fonttools==4.40.0
-fsspec==2023.6.0
-gevent==23.7.0
-gitdb==4.0.10
+Flat==0.3.2
 GitPython==3.1.32
-graphviz==0.20.1
-greenlet==2.0.2
-h5py==3.9.0
-htmlmin==0.1.12
-hyperlink==21.0.0
-idna==3.4
-ImageHash==4.3.1
-imageio==2.31.1
-imbalanced-learn==0.10.1
-importlib-metadata==6.7.0
-incremental==22.10.0
-iniconfig==2.0.0
-interpret-core==0.4.2
-ipykernel==6.23.2
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-itemadapter==0.7.0
-itemloaders==1.0.6
-itsdangerous==2.1.2
-jedi==0.18.2
+GitPython==3.1.32
+hypothesis==6.82.0
+ipython==8.12.0
 Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonpickle==3.0.1
-jsonschema==3.0.2
-jupyter-dash==0.4.2
-jupyter_client==8.2.0
-jupyter_core==5.3.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-kaleido==0.2.1
-kiwisolver==1.4.4
-lazy_loader==0.3
-lightgbm==3.3.5
-llvmlite==0.40.1
-lxml==4.9.2
-Mako==1.2.4
-Markdown==3.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+keras==2.13.1
 matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.1
-mlflow==2.4.2
+Matrix==3.0.0
+mlflow==2.5.0
 mlxtend==0.22.0
-multimethod==1.9.1
-multiprocess==0.70.14
-nbformat==5.9.0
-nest-asyncio==1.5.6
-networkx==3.1
-nltk==3.8.1
-numba==0.57.1
-numpy==1.23.0
-oauthlib==3.2.2
-orjson==3.9.1
-oyaml==1.0
-packaging==23.0
+mtrand==0.1
+mypy==1.4.1
+numarray==1.5.1
+Numeric==24.2
+numpydoc==1.5.0
+packaging==23.1
 pandas==1.5.3
-pandas-profiling==3.6.6
-pandocfilters==1.5.0
-param==1.13.0
-parsel==1.7.0
-parso==0.8.3
-patsy==0.5.3
-phik==0.12.3
-pickleshare==0.7.5
+Paver==1.3.4
+pickle5==0.0.12
 Pillow==9.4.0
-pipreqs==0.4.13
-platformdirs==3.0.0
-plotly==5.15.0
-plotly-resampler==0.8.3.2
-pluggy==1.2.0
-pmdarima==2.0.3
-prometheus-client==0.17.1
-prompt-toolkit==3.0.38
-Protego==0.2.1
-protobuf==4.23.4
-psutil==5.9.5
-pure-eval==0.2.2
-pyamg==5.0.1
-pyarrow==12.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycaret==3.0.2
-pycparser==2.21
-pyct==0.5.0
-pydantic==1.8.2
-pydeck==0.8.1b0
-PyDispatcher==2.0.7
+Pillow==10.0.0
+plex==2.0.0dev
+plotly==5.9.0
+psutil==5.9.0
+py2exe==0.13.0.0
+pycaret==3.0.4
+PyGithub==1.59.0
 Pygments==2.15.1
-PyJWT==2.7.0
-Pympler==1.0.1
-pynndescent==0.5.10
-PyNomaly==0.3.3
-pyod==1.0.9
-pyopenssl==23.0.0
-pyparsing==3.1.0
-pyrsistent==0.19.3
-pyserial==3.5
-pytest==7.4.0
-python-dateutil==2.8.2
-python-utils==3.7.0
-pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-pyviz-comms==2.3.2
-PyWavelets==1.4.1
-PyYAML==5.4.1
-pyzmq==23.2.1
-QtPy==2.3.1
-querystring-parser==1.2.4
-queuelib==1.6.2
-regex==2023.6.3
-reportlab==3.6.12
-requests==2.28.2
-requests-file==1.5.1
-retrying==1.3.4
-rich==13.4.2
-rsa==4.7.2
-s3transfer==0.6.1
-SALib==1.4.7
-schemdraw==0.15
-scikit-image==0.21.0
-scikit-learn==1.2.2
-scikit-plot==0.3.7
+PyInstaller==5.13.0
+pytest==7.3.1
+pytz==2022.7
+pywin32==305.1
+scikit_learn==1.2.2
 scipy==1.10.1
-Scrapy==2.8.0
 seaborn==0.12.2
-Send2Trash==1.8.2
-service-identity==21.1.0
-shap==0.42.0
-six==1.16.0
-skope-rules==1.0.1
-sktime==0.17.0
-slicer==0.0.7
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4
-SQLAlchemy==2.0.18
-sqlparse==0.4.3
-stack-data==0.6.2
-statsmodels==0.14.0
+setuptools==67.8.0
+Sphinx==5.0.2
+spin==0.4
+statsmodels==0.13.5
 streamlit==1.24.1
-streamlit-pandas-profiling==0.1.3
-sudo==1.0.0
-tabulate==0.9.0
-tangled-up-in-unicode==0.2.0
-tbats==1.1.3
-tenacity==8.2.2
-terminado==0.17.1
-textblob==0.17.1
-threadpoolctl==3.1.0
-tifffile==2023.7.10
-tinycss2==1.2.1
-tldextract==3.4.0
+streamlit_pandas_profiling==0.1.3
+sympy==1.11.1
+Tensor==0.3.6
+tensorflow==2.13.0
+tensorflow_intel==2.13.0
+termcolor==2.3.0
+threadpoolctl==3.2.0
 toml==0.10.2
 tomli==2.0.1
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.65.0
-trace-updater==0.0.9.1
-traitlets==5.9.0
-treeinterpreter==0.2.3
-Twisted==22.10.0
-typeguard==2.13.3
-typing_extensions==4.5.0
-tzdata==2022.7
-tzlocal==4.3.1
-urllib3==1.26.14
-validators==0.20.0
-virtualenv==20.20.0
-visions==0.7.5
-w3lib==2.1.1
-waitress==2.1.2
-watchdog==3.0.0
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.6.1
-Werkzeug==2.2.3
-widgetsnbextension==4.0.7
-wordcloud==1.9.2
-wrapt==1.15.0
-WTForms==3.0.1
-xgboost==1.7.6
-xlrd==2.0.1
-xxhash==3.2.0
-yarg==0.1.9
-ydata-profiling==4.3.1
-yellowbrick==1.5
-zipp==3.15.0
-zope.event==5.0
-zope.interface==5.5.2
+urllib3==1.26.16
+Vector==1.1.0
+ydata_profiling==4.3.2
