--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pip
 beautifulsoup4==4.12.2
 charset_normalizer==2.0.4
 click==8.0.4
@@ -20,7 +21,7 @@ mlflow==2.5.0
 mlxtend==0.22.0
 mtrand==0.1
 mypy==1.4.1
-numarray==1.5.1
+numarray
 Numeric==24.2
 numpydoc==1.5.0
 packaging==23.1
