--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ s3transfer==0.6.1
 SALib==1.4.7
 schemdraw==0.15
 scikit-image==0.21.0
-scikit-learn==1.3.0
+scikit-learn
 scikit-plot==0.3.7
 scipy==1.11.2
 Scrapy==2.8.0
@@ -89,25 +89,7 @@ service-identity==21.1.0
 shap==0.42.0
 six==1.16.0
 skope-rules==1.0.1
-sktime==0.17.0
-slicer==0.0.7
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-Sphinx==5.0.2
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-spin==0.4
-SQLAlchemy==2.0.18
-sqlparse==0.4.3
-stack-data==0.6.2
-statsmodels==0.13.5
+sktime
 streamlit==1.26.0
 streamlit-lottie==0.0.5
 streamlit-pandas-profiling==0.1.3
