--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-
+pip
 opencv-python-headless==4.5.3.56
 aionotify==0.2.0
 alabaster==0.7.13
@@ -142,7 +142,7 @@ networkx==3.1
 nltk==3.8.1
 nose==1.3.7
 numba==0.57.1
-numpy
+numpy==1.23
 numpydoc==1.5.0
 oauthlib==3.2.2
 opt-einsum==3.3.0
