--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,14 @@
 pip
 
 
-
-
-
-ipython
-ipython-genutils==0.2.0
-
-
-
-
-
-
-
-sktime==0.17.0
-
-
-streamlit
 streamlit-pandas-profiling==0.1.3
 
 zope.interface==5.5.2
-
+numpy>=1.25.0
+sktime>=0.21.0
+ipython
+ipython-genutils==0.2.0
+streamlit==1.41.1
 
 
 
